Working on tests and jest/ts config.

--- a/tsconfig.esm.json
+++ b/tsconfig.esm.json
@@ -4,5 +4,14 @@
     "module": "esnext",
     "outDir": "./dist",
     "declaration": true
-  }
+  },
+  "tsc-alias": {
+    "resolveFullPaths": true
+  },
+  "exclude": [
+    "node_modules", 
+    "test", 
+    "dist", 
+    "**/*spec.ts"
+  ]
 }
