--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@lpezet/oura-ring-api-client",
   "version": "1.0.0",
-  "description": "API client for Oura API V2",
+  "description": "API client for Oura API",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "type": "module",
@@ -19,7 +19,10 @@
     "eslint": "eslint src/**/*.ts",
     "eslint:fix": "eslint src/**/*.ts --fix",
     "lint": "npm-run-all eslint check-types",
-    "lint:fix": "npm-run-all eslint:fix check-types format"
+    "lint:fix": "npm-run-all eslint:fix check-types format",
+    "test": "jest",
+    "coveralls.off": "jest --coverage && cat ./tests/coverage/lcov.info | coveralls",
+    "coveralls": "jest --coverage"
   },
   "keywords": [
     "oura",
@@ -31,6 +34,7 @@
   "contributors": [
     "Takahiro MITSUOKA"
   ],
+  "homepage": "https://github.com/lpezet/oura-ring-api-client#readme",
   "bugs": {
     "url": "https://github.com/lpezet/oura-ring-api-client/issues",
     "email": "lpezet@gmail.com"
@@ -40,23 +44,30 @@
     "url": "https://github.com/lpezet/oura-ring-api-client.git"
   },
   "files": [
+    "README.md",
+    "LICENSE",
     "dist"
   ],
   "license": "MIT",
   "devDependencies": {
-    "@types/node": "^12.12.54",
-    "@typescript-eslint/eslint-plugin": "^3.9.0",
-    "@typescript-eslint/parser": "^3.9.0",
+    "@types/jest": "^29.5.5",
+    "@types/node": "^12.20.55",
+    "@typescript-eslint/eslint-plugin": "^3.10.1",
+    "@typescript-eslint/parser": "^3.10.1",
+    "coveralls": "^3.1.1",
     "doctoc": "^2.2.1",
-    "eslint": "^7.6.0",
+    "eslint": "^7.32.0",
     "eslint-config-prettier": "6.11.0",
-    "husky": "^4.2.5",
-    "lint-staged": "^10.2.11",
+    "husky": "^4.3.8",
+    "jest": "^29.7.0",
+    "lint-staged": "^10.5.4",
     "npm-run-all": "^4.1.5",
     "prettier": "2.0.5",
     "rimraf": "^3.0.2",
+    "ts-jest": "^29.1.1",
     "ts-node": "^8.10.2",
-    "typescript": "^3.9.7"
+    "tsc-alias": "^1.8.8",
+    "typescript": "^4.9.5"
   },
   "husky": {
     "hooks": {
@@ -70,5 +81,30 @@
   },
   "dependencies": {
     "axios": "^0.26.1"
+  },
+  "jest": {
+    "moduleFileExtensions": [
+      "js",
+      "json",
+      "ts"
+    ],
+    "rootDir": "test",
+    "transform": {
+      "^.+\\.(t|j)s$": [
+        "ts-jest", 
+        {
+          "tsconfig": "tsconfig.test.json"
+        }
+      ]
+    },
+    "collectCoverageFrom": [
+      "**/*.(t|j)s"
+    ],
+    "coverageDirectory": "../coverage",
+    "testEnvironment": "node",
+    "moduleNameMapper": {
+      "^@api/(.*)$": "<rootDir>/../src/$1",
+      "^@api$": "<rootDir>/../src/index.ts"
+    }
   }
 }
