--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -8,8 +8,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        node: [12, 14]
-        os: [ubuntu-latest, windows-latest]
+        node: [16, 18, 20]
+        os: [ubuntu-latest]
     
     steps:
       - name: Clone repository
@@ -34,3 +34,6 @@ jobs:
 
       - name: Run coveralls
         run: npm run coverage
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          flag-name: ${{matrix.os}}-node-${{ matrix.node }}
