--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -1,5 +1,8 @@
 name: Node.js CI
 on: [push]
+env:
+  CI: true
+
 jobs:
   test:
     name: Node ${{ matrix.node }} on ${{ matrix.os }}
@@ -33,7 +36,7 @@ jobs:
         run: npm install --save-dev coveralls
 
       - name: Run coveralls
-        run: npm run coverage
+        uses: coverallsapp/github-action@v2.2.3
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           flag-name: ${{matrix.os}}-node-${{ matrix.node }}
