--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "lint": "npm-run-all eslint check-types",
     "lint:fix": "npm-run-all eslint:fix check-types format",
     "test": "jest",
-    "coverage": "jest --coverage && coveralls < coverage/lcov.info",
-    "coverage.local": "jest --coverage"
+    "coverage.remote": "jest --coverage && coveralls < coverage/lcov.info",
+    "coverage": "jest --coverage"
   },
   "keywords": [
     "oura",
@@ -53,7 +53,6 @@
     "@types/node": "^12.20.55",
     "@typescript-eslint/eslint-plugin": "^3.10.1",
     "@typescript-eslint/parser": "^3.10.1",
-    "coveralls": "^3.1.1",
     "doctoc": "^2.2.1",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "6.11.0",
